--- a/evento3.html
+++ b/evento3.html
@@ -26,10 +26,14 @@
     <link rel="stylesheet" href="estilos.css"/>
 
         <style>
-     /* Barra azul a lo largo */
-      #ftco-navbar {
-        background-color: #0b0e2e !important;
-        width: 100%;
+      /* Barra azul a lo largo y todos sus elementos internos */
+      #ftco-navbar,
+      #ftco-navbar.ftco-navbar-light,
+      #ftco-navbar .container,
+      #ftco-navbar .navbar-nav,
+      #ftco-navbar .searchform {
+        background: #2257A6 !important;
+        background-image: none !important;
       }
       #ftco-navbar .container {
         max-width: 1140px;
@@ -128,6 +132,29 @@
           text-align: center;
         }
       }
+      /* Menú principal al pasar el mouse */
+      #ftco-navbar .navbar-nav .nav-link:hover,
+      #ftco-navbar .navbar-nav .nav-item.active .nav-link {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+        border-radius: 3px;
+      }
+
+      /* Fondo del submenú (antes blanco) */
+      #ftco-navbar .dropdown-menu {
+        background-color: #2257A6; /* azul barra */
+        border: none;
+      }
+
+      /* Submenú al pasar el mouse */
+      #ftco-navbar .dropdown-menu .dropdown-item {
+        color: #fff; /* texto blanco normal */
+      }
+
+      #ftco-navbar .dropdown-menu .dropdown-item:hover {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+      }
     </style>
   </head>
   <body>
@@ -137,7 +164,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icoprepa.ico" alt="Logo"> Liceo Ambrosio Echavarría <span style="font-size:14px; margin-left:5px;"></span>
         </a>
-        <a href="#" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGi8zfaig5HNr5gdfdVdUTqS0cYswoz1iUUiIHTiiFMDXrCQ/viewform?usp=header" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
       </div>
     </div>
         </div>
@@ -198,7 +225,7 @@
           class="row no-gutters slider-text align-items-center justify-content-center"
     >
           <div class="col-md-9 ftco-animate text-center">
-            <h1 class="mb-2 bread">Reconocimiento Estudiantil</h1>
+            <h1 class="mb-2 bread">🎖️Reconocimiento Estudiantil</h1>
 
             <p class="breadcrumbs">
               <span class="mr-2"
@@ -226,7 +253,7 @@
           <div class="col-lg-12 ftco-animate text-center mb-5">
             <h2 class="mb-3"></h2>
           
-            <p>
+            <p style="color: black;">
               Nos llena de orgullo compartir que una de nuestras estudiantes fue reconocida como Estudiante Meritoria del Municipio de Laguna Salada. Este reconocimiento fue entregado en una ceremonia oficial donde se valoraron no solo las altas calificaciones, sino también la dedicación, el esfuerzo constante y la actitud ejemplar.
             </p>
           </div>
@@ -267,78 +294,88 @@
       </div>
     </section>
 
-    <footer class="ftco-footer" style="background-color: #022e5d;">
-      <div class="container-fluid">
-        <div class="row mb-5">
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5">
-              <h2 class="ftco-heading-2" style="color: #fff;">Ambrosio Echavarría PREPARA</h2>
-              <div class="block-23 mb-3">
-                <ul>
-                  <li><span class="icon icon-map-marker" style="color: #fff;"></span><span class="text" style="color: #fff;">Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</span></li>
-                  <li><a href="#" style="color: #fff;"><span class="icon icon-phone" style="color: #fff;"></span><span class="text" style="color: #fff;">+1 829 781 1049</span></a></li>
-                  <li><a href="#" style="color: #fff;"><span class="icon icon-envelope" style="color: #fff;"></span><span class="text" style="color: #fff;">liceoambrosioechavarria@gmail.com</span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5">
-              <h2 class="ftco-heading-2" style="color: #fff;">Destacados</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading" style="color: #fff;"><a href="#" style="color: #fff;">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta" style="color: #fff;">
-                    <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                    <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                    <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-5 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading" style="color: #fff;"><a href="#" style="color: #fff;">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta" style="color: #fff;">
-                    <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                    <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                    <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5 ml-md-4">
-              <h2 class="ftco-heading-2" style="color: #fff;">Navegación</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Inicio</a></li>
-                <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Sobre Nosotros</a></li>
-                <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Admisiones</a></li>
-                <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Gestión Administrativa</a></li>
-                <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Contacto</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5">
-              <h2 class="ftco-heading-2 mb-0" style="color: #fff;">Síguenos</h2>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-facebook" style="color: #fff;"></span></a></li>
-                <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-instagram" style="color: #fff;"></span></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p style="color: #fff;">&copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true" style="color: #fff;"></i> por <a href="https://colorlib.com" target="_blank" style="color: #fff;"></a></p>
+   	
+		
+		<footer class="ftco-footer" style="background-color: #2257A6; color: white; padding: 30px 20px; font-size: 15px;">
+  <div class="container-fluid">
+    <div class="row mb-4">
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Ambrosio Echavarría PREPARA</h2>
+          <div class="block-23 mb-3">
+            <ul style="padding-left: 0; list-style: none; font-size: 14px;">
+              <li><span class="icon icon-map-marker" style="color: #fff;"></span> Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-phone"></span> +1 829 781 1049</a></li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-envelope"></span> liceoambrosioechavarria@gmail.com</a></li>
+            </ul>
           </div>
         </div>
       </div>
-    </footer>
 
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Destacados</h2>
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_3.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="admision.html" style="color: #fff;">Proceso De Admisión</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> Agosto 09, 2025</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_2.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="evento2.html" style="color: #fff;">Inicio del Año Escolar</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> June 27, 2019</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4 ml-md-2">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Navegación</h2>
+          <ul class="list-unstyled" style="font-size: 14px; padding-left: 0;">
+            <li><a href="index.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Inicio</a></li>
+            <li><a href="historia.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Sobre Nosotros</a></li>
+            <li><a href="admision.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Admisiones</a></li>
+            <li><a href="Personal.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Gestión Administrativa</a></li>
+            <li><a href="contact.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2 mb-2" style="color: #fff; font-size: 20px;">Síguenos</h2>
+          <ul class="ftco-footer-social list-unstyled d-flex" style="padding-left:0; gap:10px; font-size: 18px;">
+            <li><a href="https://web.facebook.com/profile.php?id=100084296012070" target="_blank" style="color: #fff;"><span class="icon-facebook"></span></a></li>
+            <li><a href="https://www.instagram.com/ambrosioehavarriaprepara/" target="_blank" style="color: #fff;"><span class="icon-instagram"></span></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <hr style="border-color: rgba(255,255,255,0.3); margin: 20px 0;">
+
+    <p style="text-align: center; font-size: 14px; margin: 0;">
+      &copy; 2025 Liceo Ambrosio Echavarría. Todos los derechos reservados.<br>
+      <a href="https://www.privacypolicies.com/live/d383c4f2-8c41-4be7-82da-ace8a8fc4bc1" target="_blank" style="color: yellow; text-decoration: none;">Política de Privacidad</a>
+    </p>
+  </div>
+</footer>
+
+
+  
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
