--- a/filosofia.html
+++ b/filosofia.html
@@ -23,10 +23,14 @@
     <link rel="stylesheet" href="css/style.css">
 
         <style>
-     /* Barra azul a lo largo */
-      #ftco-navbar {
-        background-color: #0b0e2e !important;
-        width: 100%;
+     /* Barra azul a lo largo y todos sus elementos internos */
+      #ftco-navbar,
+      #ftco-navbar.ftco-navbar-light,
+      #ftco-navbar .container,
+      #ftco-navbar .navbar-nav,
+      #ftco-navbar .searchform {
+        background: #2257A6 !important;
+        background-image: none !important;
       }
       #ftco-navbar .container {
         max-width: 1140px;
@@ -56,6 +60,29 @@
         border-color: #2257A6  !important;
         color: #fff !important;
       }
+      /* Menú principal al pasar el mouse */
+      #ftco-navbar .navbar-nav .nav-link:hover,
+      #ftco-navbar .navbar-nav .nav-item.active .nav-link {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+        border-radius: 3px;
+      }
+
+      /* Fondo del submenú (antes blanco) */
+      #ftco-navbar .dropdown-menu {
+        background-color: #2257A6; /* azul barra */
+        border: none;
+      }
+
+      /* Submenú al pasar el mouse */
+      #ftco-navbar .dropdown-menu .dropdown-item {
+        color: #fff; /* texto blanco normal */
+      }
+
+      #ftco-navbar .dropdown-menu .dropdown-item:hover {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+      }
 
       </style>
 
@@ -71,7 +98,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icoprepa.ico" alt="Logo"> Liceo Ambrosio Echavarría <span style="font-size:14px; margin-left:5px;"></span>
         </a>
-        <a href="#" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGi8zfaig5HNr5gdfdVdUTqS0cYswoz1iUUiIHTiiFMDXrCQ/viewform?usp=header" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
       </div>
     </div>
     </div>
@@ -136,11 +163,7 @@
     <div class="row justify-content-center mb-5">
       <div class="col-md-8 text-center heading-section ftco-animate">
         <h2 class="mb-4">Nuestra Filosofía</h2>
-        <p>El liceo secundario la Ambrosio Echavarría de Laguna Salda. Anexa ha creado un
-ambiente confiable y armónico basado en el desarrollo personal mediante el trabajo en
-equipo, brindándoles a los/as alumnos/as una educación de calidad, en la que se integran
-todas las dimensiones del ser humano. Brindándole el apoyo que necesita a través del
-método de enseñanza aprendizaje personalizado y cooperativo. </p>
+        <p style="color: black;">El Liceo Ambrosio Echavarría PREPARA de Laguna Salada ha creado un ambiente confiable y armónico, basado en el desarrollo personal mediante el trabajo en equipo. Brinda a los/as alumnos/as una educación de calidad, en la que se integran todas las dimensiones del ser humano, ofreciéndoles el apoyo necesario a través de un método de enseñanza-aprendizaje personalizado y cooperativo.</p>
       </div>
     </div>
 
@@ -152,7 +175,7 @@ método de enseñanza aprendizaje personalizado y cooperativo. </p>
         <div style="background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 100%; text-align: center;">
           <div style="font-size: 2.5rem;">🎯</div>
           <h3 class="mt-3">Misión</h3>
-          <p>Ofrecer una educación integral, inclusiva y de calidad a jóvenes y adultos, brindándoles las herramientas académicas y formativas necesarias para su desarrollo personal, profesional y social.</p>
+          <p style="color: black;">Ofrecer una educación integral, inclusiva y de calidad a jóvenes y adultos, brindándoles las herramientas académicas y formativas necesarias para su desarrollo personal, profesional y social.</p>
         </div>
       </div>
 
@@ -161,7 +184,7 @@ método de enseñanza aprendizaje personalizado y cooperativo. </p>
         <div style="background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 100%; text-align: center;">
           <div style="font-size: 2.5rem;">🔭</div>
           <h3 class="mt-3">Visión</h3>
-          <p>Ser un centro modelo de educación media general en la implementación de estrategias
+          <p style="color: black;">Ser un centro modelo de educación media general en la implementación de estrategias
 innovadoras, para formar íntegramente estudiantes capaces de responder a las
 exigencias competitivas universitarias y de la vida.</p>
         </div>
@@ -172,7 +195,7 @@ exigencias competitivas universitarias y de la vida.</p>
         <div style="background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 100%; text-align: center;">
           <div style="font-size: 2.5rem;">💡</div>
           <h3 class="mt-3">Valores</h3>
-          <p>Fomentamos en nuestros estudiantes la capacidad de actuar con compromiso, conciencia y sensibilidad frente a las necesidades de su comunidad, promoviendo una actitud participativa y transformadora en la sociedad.</p>
+          <p style="color: black;">Fomentamos en nuestros estudiantes la capacidad de actuar con compromiso, conciencia y sensibilidad frente a las necesidades de su comunidad, promoviendo una actitud participativa y transformadora en la sociedad.</p>
         </div>
       </div>
     </div>
@@ -182,8 +205,8 @@ exigencias competitivas universitarias y de la vida.</p>
 <div class="row justify-content-center mt-5">
   <div class="col-md-8 text-center">
     <blockquote class="blockquote">
-      <p class="mb-0">"La educación no cambia el mundo, cambia a las personas que van a cambiar el mundo."</p>
-      <footer class="blockquote-footer">Paulo Freire</footer>
+      <p style="color: black;"class="mb-0">"La educación no cambia el mundo, cambia a las personas que van a cambiar el mundo."</p>
+      <footer style="color: black;" class="blockquote-footer">Paulo Freire</footer>
     </blockquote>
   </div>
 </div>
@@ -193,78 +216,88 @@ exigencias competitivas universitarias y de la vida.</p>
 
 
 
-		 <footer class="ftco-footer" style="background-color: #022e5d;">
-    <div class="container-fluid">
-        <div class="row mb-5">
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Ambrosio Echavarría PREPARA</h2>
-                    <div class="block-23 mb-3">
-                        <ul>
-                            <li><span class="icon icon-map-marker" style="color: #fff;"></span><span class="text" style="color: #fff;">Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</span></li>
-                            <li><a href="#" style="color: #fff;"><span class="icon icon-phone" style="color: #fff;"></span><span class="text" style="color: #fff;">+1 829 781 1049</span></a></li>
-                            <li><a href="#" style="color: #fff;"><span class="icon icon-envelope" style="color: #fff;"></span><span class="text" style="color: #fff;">liceoambrosioechavarria@gmail.com</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Destacados</h2>
-                    <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                        <div class="text">
-                            <h3 class="heading" style="color: #fff;"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                            <div class="meta" style="color: #fff;">
-                                <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-21 mb-5 d-flex">
-                        <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                        <div class="text">
-                            <h3 class="heading" style="color: #fff;"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                            <div class="meta" style="color: #fff;">
-                                <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5 ml-md-4">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Navegación</h2>
-                    <ul class="list-unstyled">
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Inicio</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Sobre Nosotros</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Admisiones</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Gestión Administrativa</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Contacto</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2 mb-0" style="color: #fff;">Síguenos</h2>
-                    <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                        <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-facebook" style="color: #fff;"></span></a></li>
-                        <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-instagram" style="color: #fff;"></span></a></li>
-                    </ul>
-                </div>
-            </div>
+		 	
+		
+		<footer class="ftco-footer" style="background-color: #2257A6; color: white; padding: 30px 20px; font-size: 15px;">
+  <div class="container-fluid">
+    <div class="row mb-4">
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Ambrosio Echavarría PREPARA</h2>
+          <div class="block-23 mb-3">
+            <ul style="padding-left: 0; list-style: none; font-size: 14px;">
+              <li><span class="icon icon-map-marker" style="color: #fff;"></span> Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-phone"></span> +1 829 781 1049</a></li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-envelope"></span> liceoambrosioechavarria@gmail.com</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <p style="color: #fff;">&copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true" style="color: #fff;"></i><a href="https://colorlib.com" target="_blank" style="color: #fff;"></a></p>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Destacados</h2>
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_3.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="admision.html" style="color: #fff;">Proceso De Admisión</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> Agosto 09, 2025</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
             </div>
+          </div>
+
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_2.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="evento2.html" style="color: #fff;">Inicio del Año Escolar</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> June 27, 2019</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4 ml-md-2">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Navegación</h2>
+          <ul class="list-unstyled" style="font-size: 14px; padding-left: 0;">
+            <li><a href="index.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Inicio</a></li>
+            <li><a href="historia.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Sobre Nosotros</a></li>
+            <li><a href="admision.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Admisiones</a></li>
+            <li><a href="Personal.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Gestión Administrativa</a></li>
+            <li><a href="contact.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2 mb-2" style="color: #fff; font-size: 20px;">Síguenos</h2>
+          <ul class="ftco-footer-social list-unstyled d-flex" style="padding-left:0; gap:10px; font-size: 18px;">
+            <li><a href="https://web.facebook.com/profile.php?id=100084296012070" target="_blank" style="color: #fff;"><span class="icon-facebook"></span></a></li>
+            <li><a href="https://www.instagram.com/ambrosioehavarriaprepara/" target="_blank" style="color: #fff;"><span class="icon-instagram"></span></a></li>
+          </ul>
+        </div>
+      </div>
     </div>
+
+    <hr style="border-color: rgba(255,255,255,0.3); margin: 20px 0;">
+
+    <p style="text-align: center; font-size: 14px; margin: 0;">
+      &copy; 2025 Liceo Ambrosio Echavarría. Todos los derechos reservados.<br>
+      <a href="https://www.privacypolicies.com/live/d383c4f2-8c41-4be7-82da-ace8a8fc4bc1" target="_blank" style="color: yellow; text-decoration: none;">Política de Privacidad</a>
+    </p>
+  </div>
 </footer>
 
+
+  
     
   
 
