--- a/historia.html
+++ b/historia.html
@@ -20,10 +20,14 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-     /* Barra azul a lo largo */
-      #ftco-navbar {
-        background-color: #0b0e2e !important;
-        width: 100%;
+     /* Barra azul a lo largo y todos sus elementos internos */
+      #ftco-navbar,
+      #ftco-navbar.ftco-navbar-light,
+      #ftco-navbar .container,
+      #ftco-navbar .navbar-nav,
+      #ftco-navbar .searchform {
+        background: #2257A6 !important;
+        background-image: none !important;
       }
       #ftco-navbar .container {
         max-width: 1140px;
@@ -74,6 +78,29 @@
       .circular .path {
         stroke: #2257A6 !important;
       }
+      /* Menú principal al pasar el mouse */
+      #ftco-navbar .navbar-nav .nav-link:hover,
+      #ftco-navbar .navbar-nav .nav-item.active .nav-link {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+        border-radius: 3px;
+      }
+
+      /* Fondo del submenú (antes blanco) */
+      #ftco-navbar .dropdown-menu {
+        background-color: #2257A6; /* azul barra */
+        border: none;
+      }
+
+      /* Submenú al pasar el mouse */
+      #ftco-navbar .dropdown-menu .dropdown-item {
+        color: #fff; /* texto blanco normal */
+      }
+
+      #ftco-navbar .dropdown-menu .dropdown-item:hover {
+        background-color: #FFD700; /* Amarillo */
+        color: #000 !important;
+      }
 
     </style>
   </head>
@@ -85,7 +112,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icoprepa.ico" alt="Logo"> Ambrosio Echavarría <span style="font-size:14px; margin-left:5px;"></span>
         </a>
-        <a href="#" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGi8zfaig5HNr5gdfdVdUTqS0cYswoz1iUUiIHTiiFMDXrCQ/viewform?usp=header" class="btn btn-primary" style="background-color: #2257A6 ; border: none;">Aplica Aquí</a>
       </div>
     </div>
 
@@ -155,7 +182,7 @@
     <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 40px;">
       <div style="flex: 1 1 50%;">
         <h2>Inicio del Centro Educativo</h2>
-        <p>
+        <p style="color: black;">
           El Liceo Ambrosio Echavarría inició sus actividades en condiciones precarias, utilizando cuatro aulas y una despensa del Liceo Antonio Guzmán Fernández, en el municipio de Laguna Salada. Desde allí, comenzó su misión educativa, ajustándose al marco legal y al proceso de innovación pedagógica.
         </p>
       </div>
@@ -168,10 +195,10 @@
       </div>
       <div style="flex: 1 1 50%;">
         <h2>Origen y Fundación</h2>
-        <p>
+        <p style="color: black;">
           Este centro surge por la necesidad urgente de brindar educación accesible a los jóvenes de la comunidad, quienes muchas veces abandonaban sus estudios por razones económicas. Fue entonces cuando nació la iniciativa PREPARA, gracias al impulso de la directora distrital <strong>Ana Felicia Peña</strong> y el apoyo de instituciones comunitarias.
         </p>
-        <p>
+        <p style="color: black;">
           El liceo fue creado oficialmente en el año escolar 2019–2020 con un grupo de docentes comprometidos: Yoselin Martínez, Piedad de la Caridad Jiménez, Lourdes Gonzales, Yaugel Gutiérrez Liriano y Raysa Ester La Paz.
         </p>
       </div>
@@ -184,7 +211,7 @@
       </div>
       <div style="flex: 1 1 50%;">
         <h2>Crecimiento y Reconocimiento</h2>
-        <p>
+        <p style="color: black;">
           A partir de su fundación, el centro ha experimentado un gran crecimiento en infraestructura y calidad educativa, recibiendo reconocimiento público por su excelente labor en beneficio de los estudiantes y de toda la comunidad educativa.
         </p>
       </div>
@@ -197,10 +224,10 @@
       </div>
       <div style="flex: 1 1 50%;">
         <h2>Datos Institucionales</h2>
-        <p>
+        <p style="color: black;">
           El Liceo Ambrosio Echavarría (PREPARA) pertenece al Distrito Educativo 09-05 de Laguna Salada y la Regional 09 de Mao. Originalmente registrado con el código 27024113, actualmente opera bajo el código 0988 en modalidad sabatina.
         </p>
-        <p>
+        <p style="color: black;">
           Dirección: Calle Camilo Rodríguez, Laguna Salada.
         </p>
       </div>
@@ -212,78 +239,88 @@
 
 
 
- <footer class="ftco-footer" style="background-color: #022e5d;">
-    <div class="container-fluid">
-        <div class="row mb-5">
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Ambrosio Echavarría PREPARA</h2>
-                    <div class="block-23 mb-3">
-                        <ul>
-                            <li><span class="icon icon-map-marker" style="color: #fff;"></span><span class="text" style="color: #fff;">Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</span></li>
-                            <li><a href="#" style="color: #fff;"><span class="icon icon-phone" style="color: #fff;"></span><span class="text" style="color: #fff;">+1 829 781 1049</span></a></li>
-                            <li><a href="#" style="color: #fff;"><span class="icon icon-envelope" style="color: #fff;"></span><span class="text" style="color: #fff;">liceoambrosioechavarria@gmail.com</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Destacados</h2>
-                    <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                        <div class="text">
-                            <h3 class="heading" style="color: #fff;"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                            <div class="meta" style="color: #fff;">
-                                <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-21 mb-5 d-flex">
-                        <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                        <div class="text">
-                            <h3 class="heading" style="color: #fff;"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                            <div class="meta" style="color: #fff;">
-                                <div><a href="#" style="color: #fff;"><span class="icon-calendar" style="color: #fff;"></span> June 27, 2019</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-person" style="color: #fff;"></span> Admin</a></div>
-                                <div><a href="#" style="color: #fff;"><span class="icon-chat" style="color: #fff;"></span> 19</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5 ml-md-4">
-                    <h2 class="ftco-heading-2" style="color: #fff;">Navegación</h2>
-                    <ul class="list-unstyled">
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Inicio</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Sobre Nosotros</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Admisiones</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Gestión Administrativa</a></li>
-                        <li><a href="#" style="color: #fff;"><span class="ion-ios-arrow-round-forward mr-2" style="color: #fff;"></span>Contacto</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="ftco-footer-widget mb-5">
-                    <h2 class="ftco-heading-2 mb-0" style="color: #fff;">Síguenos</h2>
-                    <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                        <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-facebook" style="color: #fff;"></span></a></li>
-                        <li class="ftco-animate"><a href="#" style="color: #fff;"><span class="icon-instagram" style="color: #fff;"></span></a></li>
-                    </ul>
-                </div>
-            </div>
+	
+		
+		<footer class="ftco-footer" style="background-color: #2257A6; color: white; padding: 30px 20px; font-size: 15px;">
+  <div class="container-fluid">
+    <div class="row mb-4">
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Ambrosio Echavarría PREPARA</h2>
+          <div class="block-23 mb-3">
+            <ul style="padding-left: 0; list-style: none; font-size: 14px;">
+              <li><span class="icon icon-map-marker" style="color: #fff;"></span> Calle Camilo Rodríguez, Laguna Salada, Valverde, R.D.</li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-phone"></span> +1 829 781 1049</a></li>
+              <li><a href="#" style="color: #fff;"><span class="icon icon-envelope"></span> liceoambrosioechavarria@gmail.com</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <p style="color: #fff;">&copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true" style="color: #fff;"></i>  <a href="" target="_blank" style="color: #fff;"></a></p>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Destacados</h2>
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_3.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="admision.html" style="color: #fff;">Proceso De Admisión</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> Agosto 09, 2025</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
             </div>
+          </div>
+
+          <div class="block-21 mb-3 d-flex">
+            <a class="blog-img mr-3" style="background-image: url(images/image_2.jpg); width: 70px; height: 70px;"></a>
+            <div class="text" style="font-size: 14px;">
+              <h3 class="heading" style="margin:0;"><a href="evento2.html" style="color: #fff;">Inicio del Año Escolar</a></h3>
+              <div class="meta" style="color: #fff; font-size: 13px;">
+                <div><a href="#" style="color: #fff;"><span class="icon-calendar"></span> June 27, 2019</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-person"></span> Admin</a></div>
+                <div><a href="#" style="color: #fff;"><span class="icon-chat"></span> 19</a></div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4 ml-md-2">
+          <h2 class="ftco-heading-2" style="color: #fff; font-size: 20px;">Navegación</h2>
+          <ul class="list-unstyled" style="font-size: 14px; padding-left: 0;">
+            <li><a href="index.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Inicio</a></li>
+            <li><a href="historia.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Sobre Nosotros</a></li>
+            <li><a href="admision.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Admisiones</a></li>
+            <li><a href="Personal.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Gestión Administrativa</a></li>
+            <li><a href="contact.html" style="color: #fff;"><span class="ion-ios-arrow-round-forward"></span> Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2 mb-2" style="color: #fff; font-size: 20px;">Síguenos</h2>
+          <ul class="ftco-footer-social list-unstyled d-flex" style="padding-left:0; gap:10px; font-size: 18px;">
+            <li><a href="https://web.facebook.com/profile.php?id=100084296012070" target="_blank" style="color: #fff;"><span class="icon-facebook"></span></a></li>
+            <li><a href="https://www.instagram.com/ambrosioehavarriaprepara/" target="_blank" style="color: #fff;"><span class="icon-instagram"></span></a></li>
+          </ul>
+        </div>
+      </div>
     </div>
+
+    <hr style="border-color: rgba(255,255,255,0.3); margin: 20px 0;">
+
+    <p style="text-align: center; font-size: 14px; margin: 0;">
+      &copy; 2025 Liceo Ambrosio Echavarría. Todos los derechos reservados.<br>
+      <a href="https://www.privacypolicies.com/live/d383c4f2-8c41-4be7-82da-ace8a8fc4bc1" target="_blank" style="color: yellow; text-decoration: none;">Política de Privacidad</a>
+    </p>
+  </div>
 </footer>
 
+
+  
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
