Actualización de la página: misión, visión, valores y otros cambios

--- a/Personal.html
+++ b/Personal.html
@@ -327,7 +327,7 @@
       </div>
       <div class="text pt-3">
         <h3>Yoselin Altagracia Martínez Payero</h3>
-        <span class="position mb-2">Lengua y Literatura</span>
+        <span class="position mb-2">Ciencias Sociales</span>
         <p style="color: black;">Fomenta la creatividad y la comprensión lectora en los alumnos.</p>
       </div>
     </div>
@@ -340,8 +340,8 @@
       </div>
       <div class="text pt-3">
         <h3>Luz Milady Altagracia Hernandez</h3>
-        <span class="position mb-2">Química</span>
-        <p style="color: black;">Promueve la experimentación y el aprendizaje práctico en ciencias.</p>
+        <span class="position mb-2">Lengua Española</span>
+        <p style="color: black;">Fomenta la creatividad y la comprensión lectora en los alumnos.</p>
       </div>
     </div>
   </div>
@@ -357,7 +357,7 @@
           </div>
           <div class="text pt-3">
             <h3>José Luis Sanchez Pérez</h3>
-            <span class="position mb-2">Matemáticas</span>
+            <span class="position mb-2">Informática</span>
             <p style="color: black;">Se dedica a desarrollar el pensamiento lógico y analítico en los estudiantes.</p>
           </div>
         </div>
@@ -384,7 +384,7 @@
           <div class="text pt-3">
             <h3>Anyelina Inmaculada Felix</h3>
             <span class="position mb-2">Ciencias Naturales</span>
-            <p style="color: black;">Inspira la curiosidad científica a través del estudio de la vida.</p>
+            <p style="color: black;">Promueve la experimentación y el aprendizaje práctico en ciencias.</p>
           </div>
         </div>
       </div>
