--- a/admision.html
+++ b/admision.html
@@ -235,21 +235,20 @@
   }
 </style>
 
-<section class="ftco-section bg-light">
+<!-- Proceso de Admisión -->
+<section class="ftco-section bg-light" style="padding-bottom: 40px !important;">
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-md-7 text-center heading-section ftco-animate">
         <h2 class="mb-4">Proceso de Admisión</h2>
         <p style="color: black;">Conoce los pasos para inscribirte en el Liceo Ambrosio y los documentos necesarios.</p>
+      </div>
     </div>
 
     <div class="row">
       <!-- Paso 1 -->
       <div class="col-md-4 text-center ftco-animate">
         <div class="services bg-white p-4 rounded shadow admission-step">
-          <div class="">
-            <i class=""></i>
-          </div>
           <h3>📝 1. Completa el Formulario</h3>
           <p style="color: black;">Ingresa tus datos personales y académicos en línea.</p>
         </div>
@@ -258,7 +257,7 @@
       <!-- Paso 2 -->
       <div class="col-md-4 text-center ftco-animate">
         <div class="services bg-white p-4 rounded shadow admission-step">
-          <div class="">
+          <div class="icon-wrapper">
             <i class="icon-folder-upload admission-icon"></i>
           </div>
           <h3>📑 2. Sube tus Documentos</h3>
@@ -269,34 +268,37 @@
       <!-- Paso 3 -->
       <div class="col-md-4 text-center ftco-animate">
         <div class="services bg-white p-4 rounded shadow admission-step">
-          <div class="">
-            <i class=""></i>
-          </div>
           <h3>📲 3. Confirmación</h3>
           <p style="color: black;">Recibirás un mensaje de confirmación al correo o WhatsApp.</p>
         </div>
+      </div>
+    </div>
+  </div>
 </section>
 
-    <section class="ftco-section bg-light">
-      <div class="container">
-        <div class="row mt-5">
-          <div class="col-md-12">
-            <h3 class="mb-4 text-center">Documentos Requeridos</h3>
-            <ul class="list-group list-group-flush mb-4">
-              <li style="color: black;"class="list-group-item">📝 Formulario de inscripción completo</li>
-              <li style="color: black;"class="list-group-item">📄 Acta de nacimiento (original y copia)</li>
-              <li style="color: black;"class="list-group-item">📚 Récord de notas del grado anterior</li>
-              <li style="color: black;"class="list-group-item">🏥 Certificado médico actualizado</li>
-              <li style="color: black;" class="list-group-item">🖼️ 2 fotos tamaño 2x2</li>
-              <li style="color: black;"class="list-group-item">🪪 Copia de cédula del padre, madre o tutor</li>
-            </ul>
-            <div class="text-center">
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGi8zfaig5HNr5gdfdVdUTqS0cYswoz1iUUiIHTiiFMDXrCQ/viewform?usp=header" target="_blank" class="btn btn-primary px-4 py-2">
-                Ir al Formulario de Inscripción
-              </a>
-            </div>
-          </div>
-    </section>
+<!-- Documentos Requeridos -->
+<section class="ftco-section bg-light" style="padding-top: 20px !important;">
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-md-12">
+        <h3 class="mb-4 text-center">Documentos Requeridos</h3>
+        <ul class="list-group list-group-flush mb-4">
+          <li style="color: black;" class="list-group-item">📝 Formulario de inscripción completo</li>
+          <li style="color: black;" class="list-group-item">📄 Acta de nacimiento (original y copia)</li>
+          <li style="color: black;" class="list-group-item">📚 Récord de notas del grado anterior</li>
+          <li style="color: black;" class="list-group-item">🏥 Certificado médico actualizado</li>
+          <li style="color: black;" class="list-group-item">🖼️ 2 fotos tamaño 2x2</li>
+          <li style="color: black;" class="list-group-item">🪪 Copia de cédula del padre, madre o tutor</li>
+        </ul>
+        <div class="text-center">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGi8zfaig5HNr5gdfdVdUTqS0cYswoz1iUUiIHTiiFMDXrCQ/viewform?usp=header" target="_blank" class="btn btn-primary px-4 py-2">
+            Ir al Formulario de Inscripción
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     
 
