--- a/filosofia.html
+++ b/filosofia.html
@@ -255,10 +255,16 @@ exigencias competitivas universitarias y de la vida.</p>
 
       <!-- Valores -->
       <div class="col-md-4 d-flex align-items-stretch ftco-animate">
-        <div style="background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 100%; text-align: center;">
-          <div style="font-size: 2.5rem;">💡</div>
+        <div style="background: #fff; border-radius: 18px; padding: 30px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); width: 100%; text-align: center;">
+          <div style="font-size: 2.5rem;">🤝</div>
           <h3 class="mt-3">Valores</h3>
-          <p style="color: black;">Fomentamos en nuestros estudiantes la capacidad de actuar con compromiso, conciencia y sensibilidad frente a las necesidades de su comunidad, promoviendo una actitud participativa y transformadora en la sociedad.</p>
+            <ul style="list-style:none; padding:0; margin-top:20px; color:black; font-size:18px; text-align:center;">
+      <li>Responsabilidad</li>
+      <li>Respeto</li>
+      <li>Cooperación</li>
+      <li>Solidaridad</li>
+      <li>Compromiso social</li>
+    </ul>
         </div>
       </div>
     </div>
