--- a/index.html
+++ b/index.html
@@ -426,25 +426,82 @@ h1, h2, h3, h4 {
 </section>
 
 
-<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.png);">
+<!-- ===== Sección Mini-documental ===== -->
+<section id="mini-doc" class="ftco-section">
   <div class="container">
-    <div class="row justify-content-center mb-5 pb-2 d-flex">
-      <div class="col-md-8 align-items-stretch d-flex">
-        <div class="col-md-6 heading-section heading-section-white ftco-animate pl-lg-5 pt-md-0 pt-5">
-          <h2 class="mb-5">Tour Virtual</h2>
-          <p>Conoce nuestras instalaciones.</p>
+    <!-- Encabezado -->
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-8 text-center heading-section">
+        <h2 class="mb-4">Mini-documental Institucional</h2>
+        <p class="lead">Un recorrido animado por la esencia del <strong>Liceo Ambrosio Echavarría</strong>.</p>
+      </div>
+    </div>
+
+    <!-- Caja del video -->
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <div class="video-box shadow-lg">
+          <div class="video-container">
+           <iframe src="https://youtu.be/iw5fdSiipho?si=NW_OqYhBno3NGjPP"
+  title="Mini-documental Liceo Ambrosio Echavarría"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
+
+          </div>
         </div>
-      </div>	
-      <div class="col-md topper d-flex align-items-center justify-content-end">
-        <p class="mb-0">
-          <a href="#" class="btn py-2 px-3 btn-primary d-flex align-items-center justify-content-center">
-            <span>Clíc Aquí</span>
-          </a>
-        </p>
       </div>
     </div>
   </div>
 </section>
+
+<!-- ===== CSS ===== -->
+<style>
+/* Fondo degradado azul - blanco - amarillo */
+#mini-doc {
+  padding: 80px 0;
+  background: linear-gradient(135deg, #eef0f2, #504af3, #e0d699);
+}
+
+/* Caja blanca con sombra */
+.video-box {
+  background: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  border: 3px solid #004aad;
+}
+
+/* Contenedor responsivo para el video */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+/* Texto */
+#mini-doc h2 {
+  font-weight: 700;
+  color: #004aad;
+}
+
+#mini-doc p.lead {
+  font-size: 1.2rem;
+  color: #333;
+}
+</style>
+
 
 
 <section class="ftco-section bg-light">
